[package]
name = "saturn"
version = "0.1.0"
authors = ["Phoebe Goldman <phoebe@goldman-tribe.org>"]
edition = "2018"

[[bin]]
name = "kernel8"
path = "src/main.rs"

[features]
virt = []
rockpro64 = []
raspi3 = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
r0 = "1.0"
register = "0.5"
