[package]
name = "saturn"
version = "0.1.0"
authors = ["Phoebe Goldman <phoebe@goldman-tribe.org>"]
edition = "2018"

[[bin]]
name = "kernel8"
path = "src/main.rs"

[features]
virt = []
rockpro64 = []
raspi3 = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
cortex-a = "6.1"
r0 = "1.0"
tock-registers = "0.7"
spin = "0.9"
